# finance-analytics

./: Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: python-package-conda.yml
financeanalytics/: dataloader.py  dataquality.py  finance_analytics.py  financeanalytics.py  main.py  main_gui.py  planner.py  statementprocessor.py
tests/: test_data_loader.py  test_data_quality.py  test_file_recognition.py  test_statement_processor.py
tests/mock_parsed_statements/: rbc_chequing_example_1.csv  rbc_chequing_example_1.xlsx  rbc_visa_example_1.csv  rbc_visa_example_1.xlsx
tests/mock_standard_statements/: rbc_visa_standardized_example_1.xlsx
