[project]
name = "finance-analytics"
dynamic = ["version"]
description = "extract and analyze Bank statements"
dependencies = [
    "pandas == 1.5.1",
    "pdfplumber == 0.7.5"
]
[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"
[tool.setuptools_scm]
[testenv]
commands = "python -m unittest discover"